...
            "value" : "Input Search Key …"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "输入关键词 …"
          }
        }
      }
    },
    "search.tips.empty" : {
      "localizations" : {
...
            "value" : "Search"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "搜索"
          }
        }
      }
    },
    "ui-test-%lld" : {

...
